# phishguard-lite

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: urls.txt
scripts/: run_server.ps1  start_server.py
src/phishguard/: __init__.py  analyzer.py  cli.py  report.py  server.py
tests/: test_analyzer.py
