[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phishguard-lite"
version = "0.1.0"
description = "A defensive phishing URL risk analyzer with CLI, reports, and local web UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ilyes" }
]
keywords = ["cybersecurity", "phishing", "url-analysis", "security-tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Internet :: WWW/HTTP"
]

[project.scripts]
phishguard = "phishguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
